css/styles.css
* {
    box-sizing: border-box;
    vertical-align: middle;
    margin: 0;
    padding: 0;
    color: #f3f3f3;
    font-family: 'IBM Plex Sans', sans-serif;
    font-weight: 400;
    text-decoration: none;

}

body {
    background-color: #202124;

}

header {
    background-color: rgba(29, 25, 29);
    
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 10%;
}

#pup-logo {
    width: 2rem;
}

main {
    padding: 0 0;
    text-align: center;
    background-color: #202124;
}

main > #audio-progress {
    width: 100vw;
    height: 1rem;
    color: #020f38;
    border: none;
}

main > #audio-progress::-webkit-progress-bar {
    background: #202124;
}
main > #audio-progress::-webkit-progress-value {
    background: #cbcbcc;
    transition: width 0.5s ease;
}

main > marquee {
    text-align: center;
    line-height: 300%;
    margin: 3rem;
    max-height: 50vh;
}


main > #audio-controls {
    display: flex;
    align-items: center;
    background-color: #cbcbcc;
    border-radius: 50px;
    padding: 1rem;
    max-width: 300px;
    margin: auto;
}

button {
    padding: 3px;
    cursor: pointer;
    border: none;
}

main > #audio-controls > #play-button,
main > #audio-controls > #volume > #mute-button {
    border-radius: 50px;
    background-color: #cbcbcc;
    display: grid;

}


main > #audio-controls > #play-button > #play-icon,
main > #audio-controls > #play-button > #pause-icon,
main > #audio-controls > #play-button > #replay-icon,
main > #audio-controls > #volume > #mute-button > #unmute-icon,
main > #audio-controls > #volume > #mute-button > #mute-icon {
    grid-column: 1;
    grid-row: 1;
    visibility: hidden;
    color: #202124;

}


main > #audio-controls > #play-button:hover,
main > #audio-controls > #volume > #mute-button:hover {
    background-color: rgba(172, 172, 172, 0.5);
}

main > #audio-controls > #volume {
    margin-left: auto;
    display: flex;
}

main > #audio-controls > #volume > #volume-slider {
    accent-color: #202124;
    cursor: pointer;
}

